[gd_scene load_steps=11 format=3 uid="uid://j73boetj3325"]

[ext_resource type="Script" path="res://scripts/tree_point.gd" id="1_2shlo"]
[ext_resource type="Texture2D" uid="uid://bvvk4lq5ey75e" path="res://assets/T.png" id="2_7j58v"]
[ext_resource type="Texture2D" uid="uid://d017svvkdfmq5" path="res://assets/flag.png" id="3_gkp88"]
[ext_resource type="Texture2D" uid="uid://barn52gu21y1m" path="res://assets/circle_under.png" id="3_mfaph"]
[ext_resource type="Texture2D" uid="uid://7ilqnyh8gpmk" path="res://assets/circle_fill.png" id="4_ibw03"]
[ext_resource type="Texture2D" uid="uid://ljfjnwfcxfyp" path="res://assets/Present.png" id="5_eykuf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1htu6"]
radius = 61.4003

[sub_resource type="Animation" id="Animation_3c3m3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprite/gift:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TreeSprite/gift:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TreeSprite/gift:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6la7i"]
resource_name = "fly"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprite/gift:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.3, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TreeSprite/gift:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(13.5764, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.0196078)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TreeSprite/gift:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.189464, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2mfcr"]
_data = {
"RESET": SubResource("Animation_3c3m3"),
"fly": SubResource("Animation_6la7i")
}

[node name="TreePoint" type="Node2D"]
script = ExtResource("1_2shlo")

[node name="TreeSprite" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(0, -31)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_7j58v")

[node name="FlagSprite" type="Sprite2D" parent="TreeSprite"]
unique_name_in_owner = true
position = Vector2(0, 233.413)
texture = ExtResource("3_gkp88")

[node name="gift" type="Sprite2D" parent="TreeSprite"]
unique_name_in_owner = true
z_index = 10
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_eykuf")
offset = Vector2(0, -97.3261)

[node name="EnteredArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnteredArea"]
shape = SubResource("CircleShape2D_1htu6")

[node name="CircleProgress" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
z_index = 20
z_as_relative = false
offset_left = -8.0
offset_top = -33.0
offset_right = 9.0
offset_bottom = -16.0
step = 0.1
value = 45.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("3_mfaph")
texture_progress = ExtResource("4_ibw03")

[node name="UpscoreCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 12.0
one_shot = true

[node name="gftAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_2mfcr")
}

[connection signal="body_exited" from="EnteredArea" to="." method="_on_entered_area_body_exited"]
[connection signal="timeout" from="UpscoreCooldown" to="." method="_on_upscore_cooldown_timeout"]
